# ActiveObjectPOC

./: CMakeLists.txt  MagicMacro.h  README.md  Test.h  TestItf.h  TestProxy.h  main.cpp
